<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="4dp">
            <!-- Label -->
            <TextView
                style="@style/EditorFieldStyle"
                android:layout_margin="@dimen/large_margin"
                android:text="@string/hint_book_name"
                android:textAlignment="viewEnd"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_margin="@dimen/large_margin"
                android:text="@string/hint_book_price"
                android:textAlignment="viewEnd"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_margin="@dimen/large_margin"
                android:text="@string/hint_book_qty"
                android:textAlignment="viewEnd"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_margin="@dimen/large_margin"
                android:text="@string/hint_book_supplier"
                android:textAlignment="viewEnd"
                android:textAppearance="?android:textAppearanceSmall" />

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_margin="@dimen/large_margin"
                android:text="@string/hint_book_supplier_phone"
                android:textAlignment="viewEnd"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:textAlignment="center"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:layout_marginStart="@dimen/large_margin"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:width="12dp"
                    android:height="12dp"
                    android:text="-"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_book_qty"
                    style="@style/QtyEditorFieldStyle"
                    android:layout_weight="2"
                    android:hint="@string/hint_book_qty"
                    android:inputType="number"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/plus_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:width="12dp"
                    android:height="12dp"
                    android:text="+"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_book_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_book_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/editor_call_supplier"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>