<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/large_margin"
    android:padding="@dimen/large_margin"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/list_item_text" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/x_small_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_qty"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/list_item_text" />

            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/list_item_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_price"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/list_item_text" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/list_item_text" />

            <Button
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/main_sale" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>